--- a/index.html
+++ b/index.html
@@ -82,14 +82,7 @@
                   </span>
                 </a>
               </li>
-            <!--  <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li> -->
+              
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/neerajmathur27/" target="_blank">
                   <span class="fa-stack fa-lg">
@@ -99,10 +92,18 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/neerajmathur" target="_blank">
+                <a href="https://github.com/neerajmathur" >
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/neerajmathur/neerajmathur.github.io/raw/master/Neeraj_Mathur_CV.pdf" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-file-pdf-o fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -230,26 +231,66 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0"><a href="https://dl.acm.org/citation.cfm?id=3210480">1. Usability Evaluation Framework for Mobile Apps Using Code Analysis</a></h3>
+              <div class="subheading mb-3">Neeraj Mathur, Sai Anirudh Karre & Dr. Y Raghu Reddy</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">EASE (June 2018), New Zealand</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0"><a href="https://dl.acm.org/citation.cfm?id=3205947">2. Analysis of FinTech Mobile App Usability for Geriatric Users in India</a></h3>
+              <div class="subheading mb-3">Neeraj Mathur, Sai Anirudh Karre, Lalit S Mohan & Dr. Y Raghu Reddy</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">ChiUxid (March 2018), Indonesia</span>
             </div>
           </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="https://link.springer.com/chapter/10.1007/978-3-319-76941-7_81">3. SIREN - Security Information Retrieval and Extraction eNgine</a></h3>
+              <div class="subheading mb-3">Lalit S Mohan, Neeraj Mathur, Shriyansh Agrawal & Dr. Y Raghu Reddy</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ECIR (March 2018), France</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="https://link.springer.com/chapter/10.1007/978-3-319-30243-0_10">4. Improving Mobile Banking Usability Based on Sentiments</a></h3>
+              <div class="subheading mb-3">Lalit S Mohan, Neeraj Mathur & Dr. Y Raghu Reddy</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ENASE (Feburary 2016), Barcelona, Spain</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="http://ceur-ws.org/Vol-1519/paper3.pdf">5. Correctness of Semantic Code Smell Detection Tools</a></h3>
+              <div class="subheading mb-3">Neeraj Mathur & Dr. Y Raghu Reddy</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">QuASoQ (December 2015), New Delhi, India</span>
+            </div>
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="https://ieeexplore.ieee.org/document/7320375/">6. Mobile App Usability Index (MAUI) for Improving Mobile Banking Adoption,</a></h3>
+              <div class="subheading mb-3">Lalit Mohan, Neeraj Mathur & Dr. Y Raghu Reddy</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ENASE (December 2015), Barcelona, Spain</span>
+            </div>
+          </div>
+
+          
 
         </div>
       </section>
