--- a/index.html
+++ b/index.html
@@ -151,7 +151,24 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Principal Application Engineer</h3>
               <div class="subheading mb-3">Oracle India Pvt. Ltd.</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                <p>
+                    <ul>
+                      <li> Product: Oracle P6 Primavera Project Management</li>
+                    <li>Environment: WPF, Delphi C#, Winforms, Entity Context, SQL Server, Oracle DB, Task Parallel Library, TFS.</li>
+                    <li>Overview: Oracle’s Primavera Project Management is a leading Project Management application that is very intuitive.  World most complex projects are planned using this application. This is a recognized standard for high-performance project management Primavera P6 Professional Project Management, handles large-scale, highly sophisticated and multifaceted projects. Organize projects of up to 100,000 activities with unlimited resources and an unlimited number  of target plans.</li>
+                    <li> Roles & Responsibilities:
+                      <ul> 
+                        <li>Help other team members in understanding product’s deep technical aspects</li>
+                        <li>Responsible for building cache feature in application for connecting to Oracle Cloud</li>
+                            <li>Resolve critical technical issues (24X7 or Sev 1 issues).</li>
+                                <li>Design and functional review of new enhancements/features.</li>
+                                    <li>Coordinate with other teams for product integration.</li>
+                                        <li>Development effort estimations.</li>
+                                            <li>Collaborate with support teams and customer for addressing their issues.</li>
+                  </ul>
+                  </li>
+                  </ul>
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2012 - Present</span>
@@ -215,6 +232,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Rajasthan University</h3>
               <div class="subheading mb-3">Bachelor of Engineering</div>
+              <div>Computer Science</div>
               <p>GPA: 7.2</p>
             </div>
             <div class="resume-date text-md-right">
