updated experience section

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
@@ -71,8 +71,8 @@
           <h1 class="mb-0">Neeraj
             <span class="text-primary">Mathur</span>
           </h1>
-          <div class="subheading mb-5">117/3 Jai Jawan Colony, Jaipur (Rajasthan) · (888) 693-7575 ·
-            <a href="mailto:name@email.com">neeraj.mathur@gmail.com</a>
+          <div class="subheading mb-5">Flat# 303 Shri Harikrishna Residency, J V Colony, Indira Nagar, Gachibowli (Hyderabad) · (888) 693-7575 ·
+            <a href="mailto:neeraj.mathur@gmail.com">neeraj[dot]mathur[@]gmail.com</a>
             <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
                 <a href="#">
@@ -160,53 +160,179 @@
                       <ul> 
                         <li>Help other team members in understanding product’s deep technical aspects</li>
                         <li>Responsible for building cache feature in application for connecting to Oracle Cloud</li>
-                            <li>Resolve critical technical issues (24X7 or Sev 1 issues).</li>
-                                <li>Design and functional review of new enhancements/features.</li>
-                                    <li>Coordinate with other teams for product integration.</li>
-                                        <li>Development effort estimations.</li>
-                                            <li>Collaborate with support teams and customer for addressing their issues.</li>
-                  </ul>
+                        <li>Resolve critical technical issues (24X7 or Sev 1 issues).</li>
+                        <li>Design and functional review of new enhancements/features.</li>
+                        <li>Coordinate with other teams for product integration.</li>
+                        <li>Development effort estimations.</li>
+                        <li>Collaborate with support teams and customer for addressing their issues.</li>
+                    </ul>
                   </li>
                   </ul>
                 </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2012 - Present</span>
+              <span class="text-primary">March 2016 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Senior Application Engineer</h3>
+              <div class="subheading mb-3">Oracle India Pvt. Ltd.</div>
+                <p>
+                    <ul>
+                      <li> Product: Oracle Primavera Portfolio Management</li>
+                    <li>Environment: ASP.NET, ASP.Net MVC,  JavaScript, C#, C++, Winforms, Entity Framework, SQL Server, Oracle DB, .Net remoting, Threads, Multithreaded programming, Windows Services, COM, Event Logs, XML, User Controls, TFS</li>
+                    <li>Overview: Oracle’s Primavera Portfolio Management (formerly Prosight) is a leading Project Portfolio Management application that is very intuitive and utilizes a 100\% web interface. Using Portfolio Management’s top-down approach, clients are able to manage their business objectives and rank their investments prior to selecting them. In terms of processes defined in PMBOK, the main focus of the tool is to provide users better control in the two major aspects of a project life cycle: the Planning phase (propose initiatives, clarify objectives, and prioritize/select investments) and the Controlling phase (track performance, review portfolio and adjust course). Primavera Portfolio Management is organized by solution modules: Investor Maps, Scorecards, Forms, Workbooks, Dashboards, Process and Project Management Bridge.  Each module provides a unique view of business activities, from the strategic overview to the everyday operational aspects of individual investments.</li>
+                    <li> Roles & Responsibilities:
+                      <ul> 
+                          <li>Help other team members in understanding product’s deep technical aspects</li>
+                          <li>Responsible for addressing any security issues (Reflected XSS, Stores XSS, CSRF attack etc)</li>
+                          <li>Worked as a Team lead to assign development tasks to team members.</li>
+                          <li>Resolve critical technical issues (24X7 or Sev 1 issues).</li>
+                          <li>Design and functional review of new enhancements/features.</li>
+                          <li>Coordinate with other teams for product integration.</li>
+                          <li>Development effort estimations.</li>
+                          <li>Module development for enhancements like workflows, graph etc</li>
+                          <li>Improving function engine efficiency by addressing concurrency and distributed environment issues.</li>
+                          <li>Collaborate with support teams and customer for addressing their issues.</li>
+                    </ul>
+                  </li>
+                  </ul>
+                </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">January 2012 - March 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Technical Lead</h3>
+                <div class="subheading mb-3">Q3 TEchnologies</div>
+                  <p>
+                      <ul>
+                        <li> Product: The Jewellery Channel – Jewellery Auction Management System</li>
+                      <li>Environment:  C#, .Net 4.0, Entity Framework, Auto Mapper, WCF Silverlight, MS Visio 2003, MS Project 2007, SQL Server 2008</li>
+                      <li>Overview: Auction Management System  is a complete system for Online, On Air Live auctioning of Jewellery Item's. The system is developed and deployed on 3 different locations (countries) – US, UK & Germany. It is running successfully at all locations. AMS is able to handle all the primitive and secondary activities related to Auctions like Scheduling and Planning of Auctions, TV Broadcasting, Sales, Invoicing, Manifesting, Customer support etc. This is a comprehensive set of applications, web services and websites and about 39 major applications are working intimately to run a successful auction cycle.</li>
+                      <li> Roles & Responsibilities:
+                        <ul> 
+                            <li>Requirement gathering, functional analysis and documentation.</li>
+                            <li>Assign development tasks to team.</li>
+                            <li>Resolve technical issues in time.</li>
+                            <li>Design and functional review of project.</li>
+                            <li>Coordinate with other teams for integration.</li>
+                            <li>Development effort estimations.</li>
+                            <li>Worked closely with the client at both project and senior management level.</li>
+                      </ul>
+                    </li>
+                    </ul>
+                  </p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">December 2009 - January 2012</span>
+              </div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">Technical Lead</h3>
+                  <div class="subheading mb-3">Q3 TEchnologies</div>
+                    <p>
+                        <ul>
+                          <li> Client: Vertisoft, Canada</li>
+                        <li>Environment:  VB.Net, Asp.Net, WCF, ADO.NET, XML, MY SQL, MS Visio, IIS 7, Visual Studio TFS, MS- Office.</li>
+                        <li>Overview: The ManageBox is a CMS framework designed to produce a code for the  e-commerce web sites where the user just have to pass on there website  needs and this tool will generate the whole code and set of classes to manage the E-commerce website, user is also allowed to maintain the security at the field level and also allowed to maintain the versioning of there data. More than 200 websites are produced by using this framework.</li>
+                        <li> Roles & Responsibilities:
+                          <ul> 
+                              <li>Interacted with the development manager for understanding requirements.</li>
+                              <li>Development of base classes.</li>
+                              <li>Support for handling critical bugs.</li>
+                              <li>Development of Web Services for data processing like currency conversion, shopping cart etc</li>
+                        </ul>
+                      </li>
+                      </ul>
+                    </p>
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">December 2009 - January 2012</span>
+                </div>
+              </div>
+         
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Technical Lead</h3>
+                    <div class="subheading mb-3">Q3 TEchnologies</div>
+                      <p>
+                          <ul>
+                            <li> Client: Symfo</li>
+                          <li>Environment:   C#, WinForms, Windows Services, WCF, ADO.NET, XML, SQL server 2005, MS Visio, Visual Source Safe, MS- Office</li>
+                          <li>Overview: The SymQOL application is designed to allow the Symfo personnel to design  studies/applications on Desktop, send/install them on PDAs, collect data recorded by the patient, and transmit data to WOW APIs. The WOW APIs will encrypt the data and send to acoustic server and decrypt it there. The SymQOL application will receive the decrypted data and prepare a readable file containing actual questions and answers given by patients</li>
+                          <li> Roles & Responsibilities:
+                            <ul> 
+                                <li>Interacted with the development manager for understanding requirements.</li>
+                                <li>Development of Server Agent for Data Transfer and Log creation.</li>
+                                <li>Client side support for handling critical bugs.</li>
+                                <li>Development of Windows Services for Background data processing.</li>
+                                <li>Created secured way for data transfer from Aquostic Server to Symfo Server.</li>
+                          </ul>
+                        </li>
+                        </ul>
+                      </p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary">December 2009 - January 2012</span>
+                  </div>
+                </div>
+
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                      <h3 class="mb-0">Software Engineer</h3>
+                      <div class="subheading mb-3">Deccan Consulting Corp</div>
+                        <p>
+                            <ul>
+                              <li> Client: Enable Consulting LLC</li>
+                            <li>Environment:   C#, ADO.NET, ASP.NET 2.0, XML, SQL server 2005, Business Intelligence, SSIS, JavaScript, IIS 6.0, MS Visio, Visual Source Safe, MS- Office, XHTML, CSS, Bugzilla</li>
+                            <li>Overview: COMCAST® Media Manager & Video on Demand are two Applications developed to manage advertisements and videos (shown to the users on their choice) which is being ran over the largest Cable Network in USA. Comcast is the largest Digital Service & High Speed Internet provider in USA. This platform allows the users to work in a collaborative manner in order to attain utmost efficiency</li>
+                            <li> Roles & Responsibilities:
+                              <ul> 
+                                  <li>Developed module record and play media files over cable network</li>
+                                  <li>Responsible for converting existing application to Asp.Net </li>
+                            </ul>
+                          </li>
+                          </ul>
+                        </p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                      <span class="text-primary">October 2007 - November 2009</span>
+                    </div>
+                  </div>
+
+
+                  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                      <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Senior Programmer</h3>
+                        <div class="subheading mb-3">Monsoon Software Consulting, Jaipur, India</div>
+                          <p>
+                              <ul>
+                                <li> Title: www.IndiaResults.com</li>
+                              <li>Environment: C#, ADO.NET, ASP.Net 1.1/2.0, SQL server 2000/2005, JavaScript, MS Access, FoxPro, IIS 6.0,MS- Office, HTML, CSS, V.B. 6.0</li>
+                              <li>Overview: It is a broad based career information portal used for publishing exam results by Universities and exam boards all over India. It is utilized by students all over India to get fast and accurate exam results. Current size of the database is 80 million records using Multi Tera Bytes of database space holding exam results of millions of students all over India</li>
+                              <li> Roles & Responsibilities:
+                                <ul> 
+                                    <li>Interacted with client for understanding university and board result data structure.</li>
+                                    <li>Developed code to convert the data into proper format.</li>
+                                    <li>Uploaded data in SQL Server and wrote queries, stored procedures, triggers, functions using SQL to retrieve data from MS Access and SQL Server databases.</li>
+                              </ul>
+                            </li>
+                            </ul>
+                          </p>
+                      </div>
+                      <div class="resume-date text-md-right">
+                        <span class="text-primary">November 2006 - October 2007</span>
+                      </div>
+                    </div>
 
         </div>
 
@@ -332,13 +458,13 @@
 
 </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
         </div>
-      </section>
+      </section> -->
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
