--- a/index.html
+++ b/index.html
@@ -344,10 +344,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">International Institute Of Information Technology</h3>
+              <h3 class="mb-0">International Institute Of Information Technology (Hyderabad)</h3>
               <div class="subheading mb-3">Master of Science</div>
-              <div>Computer Science - Usability and Information Retrival</div>
+              <div>Computer Science - Usability and Information Retrival
+              </div>
               <p>GPA: 9.67</p>
+              <div>
+                  Course Work :- 
+                  <ul>
+                      <li>Database Management Systems</li>
+                      <li>Information Retrival & Extraction</li>
+                      <li>Research Methodologies</li>
+                      <li>Cloud Computing</li>
+                      <li>Software Quality</li>
+                      <li>Software Engineering</li>
+                    </ul>
+
+              </div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2013 - June 2018</span>
