updated skills sections

--- a/index.html
+++ b/index.html
@@ -457,8 +457,9 @@
           <h2 class="mb-5">Skill Sets</h2>
 
 <ul>
-  <li><b>.Net Technologies</b> :- MS.Net Framework 2.0/3.5/4.5, ASP.Net 2.0/3.0, ASP.Net MVC 4, ADO.NET, Entity Framework, WCF, WEB Api, REST, SOAP, Web Services, Unity Applications Block
-   <li><b>Languages </b> :- C#, .NET, VB.Net, JavaScript, VBScript , Core JAVA, HTML5, XHTML, XSL, XSLT, CSS3, XML</li>
+    <li><b>.Net Technologies</b> :- MS.Net Framework 2.0/3.5/4.5, ASP.Net 2.0/3.0, ASP.Net MVC 4, ADO.NET, Entity Framework, WCF, WEB Api, REST, SOAP, Web Services, Unity Applications Block
+    <li><b>Languages </b> :- C#, .NET, VB.Net, JavaScript, VBScript , Core JAVA, HTML5, XHTML, XSL, XSLT, CSS3, XML</li>
+    <li><b>Architecture Patterns </b> :- MVC, MVP, MVVM, Microservices </li>
     <li><b>JavaScript Libraries</b> :- jQuery, AngularJS</li>
     <li><b>Databases</b> :- SQL Server 2014/2008 R2, Oracle 12c</li>
     <li><b>Web Servers</b> :- IIS 7.0/6.0/5.0, Working knowledge of Tomcat, Weblogic</li>
