--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3>Professional Summary</h3>
             <p>
                 <ul>
-                  <li>10 years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
+                  <li>10+ years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
                     Services, WCF, SOAP, REST, ORM, CSS3, SQL Server, HTML5, JavaScript, JQuery AngularJS, etc.</li>
                     <li>Work experience in MS.Net Technology including .NET Framework v2.0/3.5/4.5, ASP.NET 4.0, ASP.Net MVC, Entity Framework,
                       WCF, Entity Framework, XML, C#, Generic classes.</li>
