added aws certification

--- a/index.html
+++ b/index.html
@@ -484,6 +484,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+              <li>
+                  <i class="fa-li fa fa-trophy text-warning"></i>
+                  AWS Cloud Practitioner Essentials (Digital)</li>
+                <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Received "Customer Champion Award" in Oracle for winning the confidence of customer in handling critical issues.</li>
