--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
           <ul class="fa-ul mb-0">
               <li>
                   <i class="fa-li fa fa-trophy text-warning"></i>
-                  AWS Cloud Practitioner Essentials (Digital)</li>
+                  <a href="aws_essentials_certification.pdf"> AWS Cloud Practitioner Essentials (Digital)</a></li>
                 <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
