added exam link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
       </div>
       <div>
-        <img src="img/Microsoft_Exam534.png" width="150" />
+        <a href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32" target="_blank"><img src="img/Microsoft_Exam534.png" width="150" /> </a>
       </div>
       
     </nav>
