--- a/index.html
+++ b/index.html
@@ -491,9 +491,13 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a target="_blank" href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32"> 70-535: Architecting Microsoft Azure Solutions </a>
+            </li>
               <li>
                   <i class="fa-li fa fa-trophy text-warning"></i>
-                  <a href="aws_essentials_certification.pdf"> AWS Cloud Practitioner Essentials (Digital)</a></li>
+                  <a target="_blank" href="aws_essentials_certification.pdf"> AWS Cloud Practitioner Essentials (Digital)</a></li>
                 <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
