--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
       </div>
       <div>
-        <a href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32" target="_blank"><img src="img/Microsoft_Exam534.png" width="150" /> </a>
+        <a href="https://www.youracclaim.com/badges/7195ce96-9a95-441e-88d5-40d8a5fe6cbb" target="_blank"><img src="img/azure-solutions-architect-expert.png" width="150" /> </a>
       </div>
       
     </nav>
@@ -491,6 +491,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+              <li>
+                  <i class="fa-li fa fa-trophy text-warning"></i>
+                  <a target="_blank" href="https://www.youracclaim.com/badges/7195ce96-9a95-441e-88d5-40d8a5fe6cbb"> Microsoft Certified: Azure Solutions Architect Expert </a>
+              </li>
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
                 <a target="_blank" href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32"> 70-535: Architecting Microsoft Azure Solutions </a>
