--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
       </div>
       <div>
-        <a href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32" target="_blank"><img src="img/Microsoft_Exam534.png" width="150" /> </a>
+        <a href="https://www.youracclaim.com/badges/7195ce96-9a95-441e-88d5-40d8a5fe6cbb" target="_blank"><img src="img/azure-solutions-architect-expert.png" width="150" /> </a>
       </div>
       
     </nav>
@@ -122,7 +122,7 @@
             <h3>Professional Summary</h3>
             <p>
                 <ul>
-                  <li>10+ years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
+                  <li>13+ years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
                     Services, WCF, SOAP, REST, ORM, CSS3, SQL Server, HTML5, JavaScript, JQuery AngularJS, etc.</li>
                     <li>Work experience in MS.Net Technology including .NET Framework v2.0/3.5/4.5, ASP.NET 4.0, ASP.Net MVC, Entity Framework,
                       WCF, Entity Framework, XML, C#, Generic classes.</li>
@@ -491,6 +491,11 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+              
+              <li>
+                  <i class="fa-li fa fa-trophy text-warning"></i>
+                  <a target="_blank" href="https://www.youracclaim.com/badges/7195ce96-9a95-441e-88d5-40d8a5fe6cbb"> Microsoft Certified: Azure Solutions Architect Expert </a>
+              </li>
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
                 <a target="_blank" href="https://www.youracclaim.com/badges/cd67d5ca-788e-4752-88f6-cb53e56d6a32"> 70-535: Architecting Microsoft Azure Solutions </a>
