--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Neeraj Mathur</title>
+    <title>Neeraj Mathur - Azure Solution Architect</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -117,7 +117,7 @@
           </div>
           
 
-          <p class="mb-5">To pursue a research oriented career in the field of Software design, development and implementation using my experience in technologies like ASP.Net, MVC Framework, C#, Entity Framework, WCF, Web API, HTML5, CSS3, AngularJS, SQL Server, Big Data, Cloud Computing. Seeking professional growth as a lead/architect</p>
+          <p class="mb-5">To pursue a research oriented career in the field of Software design, development and implementation using my experience in technologies like ASP.Net, MVC Framework, C#, Entity Framework, Azure, WCF, Web API, HTML5, CSS3, AngularJS, SQL Server, Big Data, Cloud Computing. Seeking professional growth as a lead/architect</p>
           <div class="resume-content mr-auto">
             <h3>Professional Summary</h3>
             <p>
