--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Neeraj Mathur - Azure Solution Architect</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSS 11-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
