--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            
           </h1>
           
-          <div class="subheading mb-5">Flat# 303 Shri Harikrishna Residency, J V Colony, Indira Nagar, Gachibowli (Hyderabad) · (888) 693-7575 ·
+          <div class="subheading mb-5">117 Jai Jawan Colony, Scheme 3, Jaipur - 302018, Rajasthan, India · (888) 693-7575 ·
             <a href="mailto:neeraj.mathur@gmail.com">neeraj[dot]mathur[@]gmail.com</a>
             <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
@@ -153,6 +153,36 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+		<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Principal Application Engineer</h3>
+              <div class="subheading mb-3">Avalara</div>
+                <p>
+                    <ul>
+                      <li> Product: Integratio Studio</li>
+                    <li>Environment: DOTNet 7, Visual studio 2023, Mongo Db, Angular, Java, Camunda, BPMN, NodeJs, React, Visual Code, IntelliJ</li>
+                    <li>Overview: This is a Low code platform to create tax connectors that talk between the ERP and Avalara systems</li>
+                    <li> Roles & Responsibilities:
+                      <ul> 
+                        <li>Stakeholder management</li>
+                        <li>Architecture of product</li>
+                        <li>Guide and help team to design enterprise product</li>
+			<li>Component base desingin of sustem</li>
+                        <li>Resolving technical roadbloack</li>
+                        <li>Coordinate with other teams for product integration.</li>
+                        <li>Development effort estimations.</li>
+                        <li>Collaborate with support teams and customer for addressing their issues.</li>
+			<li>Building core framework</li>
+                    </ul>
+                  </li>
+                  </ul>
+                </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2016 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
