--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h3>Professional Summary</h3>
             <p>
                 <ul>
-                  <li>13+ years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
+                  <li>18+ years of expertise in developing client-server and web-based applications using ASP.NET, MVC Architecture, C#, Web
                     Services, WCF, SOAP, REST, ORM, CSS3, SQL Server, HTML5, JavaScript, JQuery AngularJS, etc.</li>
                     <li>Work experience in MS.Net Technology including .NET Framework v2.0/3.5/4.5, ASP.NET 4.0, ASP.Net MVC, Entity Framework,
                       WCF, Entity Framework, XML, C#, Generic classes.</li>
@@ -180,7 +180,7 @@
                 </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2016 - Present</span>
+              <span class="text-primary">December 2021 - Present</span>
             </div>
           </div>
 
@@ -208,7 +208,7 @@
                 </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2016 - Present</span>
+              <span class="text-primary">March 2016 - December 2021</span>
             </div>
           </div>
 
